--- a/HeaderParser.vcxproj
+++ b/HeaderParser.vcxproj
@@ -26,12 +26,15 @@
     <Platform Condition="'$(Platform)' == ''">x64</Platform>
     <ReadOnlyProject>true</ReadOnlyProject>
   </PropertyGroup>
+  
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  
   <PropertyGroup Label="Configuration">
     <TargetVersion>Windows10</TargetVersion>
     <TargetPlatform>Desktop</TargetPlatform>
     <!--<DriverTargetPlatform>Desktop</DriverTargetPlatform>-->
-    <PlatformToolset>WindowsApplicationForDrivers10.0</PlatformToolset> <!-- smaller build than v142 -->
+    <!-- <PlatformToolset>WindowsApplicationForDrivers10.0</PlatformToolset> smaller build than v142 -->
+    <PlatformToolset>v142</PlatformToolset>
     <ConfigurationType>Application</ConfigurationType>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)'=='Release'">
