No exe icon build option

--- a/HeaderParser.vcxproj
+++ b/HeaderParser.vcxproj
@@ -144,7 +144,7 @@
     <ClCompile Include="src\headerParserLib.c" />
   </ItemGroup>
   
-  <ItemGroup>
+  <ItemGroup Condition="'$(Icon)'=='1'">
     <ResourceCompile Include="res\headerparser.rc" />
   </ItemGroup>
 
